--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@material-tailwind/react": "^2.1.8",
     "@react-icons/all-files": "^4.1.0",
     "localforage": "^1.10.0",
@@ -17,8 +18,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-infinite-carousel": "^0.0.7",
     "react-router-dom": "^6.21.1",
-    "sort-by": "^1.2.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
